uploading alff-basil-idemo surfaces and powerpoint

--- a/ALFF_BASIL_IDEMO/R/surfplot.ipynb
+++ b/ALFF_BASIL_IDEMO/R/surfplot.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -23,53 +25,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/global_wcov_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/idemo_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/idemo_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/alff_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/cbf-isla_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/alff_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/cbf-isla_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/global_wcov_mean.nii.gz\n"
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/cbf-basil_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/alff_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/cbf-basil_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/idemo_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/alff_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/alff_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/cbf-basil_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/cbf-basil_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/cbf-basil_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/global_wcov_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/idemo_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/idemo_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/alff_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/alff_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/global_wcov_mean.nii.gz\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_dir = \"/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/\" #TOCHANGE\n",
+    "output_dir = \"/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/\" #TOCHANGE\n",
     "freeMNI_dir = os.path.join(output_dir, \"freesurfer_images/MNI_space\")\n",
     "figures_dir = os.path.join(output_dir, \"figures/surfaces\")\n",
     "\n",
@@ -87,92 +79,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_age_fdr05.nii.gz\n",
+      "done: cbf-basil_sex-age_fdr05\n",
       "done: alff_age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_sex-age_fdr05.nii.gz\n",
-      "done: cbf-isla_sex-age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_age_fdr05.nii.gz\n",
+      "done: cbf-basil_age_fdr05\n",
       "done: idemo_age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_sex_fdr05.nii.gz\n",
-      "done: cbf-isla_sex_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_age_fdr05.nii.gz\n",
-      "done: cbf-isla_age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex-age_fdr05.nii.gz\n",
       "done: idemo_sex-age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex_fdr05.nii.gz\n",
       "done: idemo_sex_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_sex-age_fdr05.nii.gz\n",
       "done: alff_sex-age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_sex_fdr05.nii.gz\n",
       "done: alff_sex_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz\n",
+      "done: cbf-basil_sex_fdr05\n",
       "done: global_wcov_sex_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex-age_fdr05.nii.gz\n",
       "done: unscaled_wcor_sex-age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex-age_fdr05.nii.gz\n",
       "done: global_wcov_sex-age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex_fdr05.nii.gz\n",
       "done: unscaled_wcor_sex_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_age_fdr05.nii.gz\n",
       "done: unscaled_wcor_age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_age_fdr05.nii.gz\n",
       "done: global_wcov_age_fdr05\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_7.nii.gz\n",
-      "done: yeo7_7\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_5.nii.gz\n",
-      "done: yeo7_5\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_1.nii.gz\n",
-      "done: yeo7_1\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_3.nii.gz\n",
-      "done: yeo7_3\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_6.nii.gz\n",
-      "done: yeo7_6\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_4.nii.gz\n",
-      "done: yeo7_4\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/yeo7_regions/yeo7_2.nii.gz\n",
-      "done: yeo7_2\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_5000.nii.gz\n",
-      "done: aal_5000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_8000.nii.gz\n",
-      "done: aal_8000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_3000.nii.gz\n",
-      "done: aal_3000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_4000.nii.gz\n",
-      "done: aal_4000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_9000.nii.gz\n",
-      "done: aal_9000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_2000.nii.gz\n",
-      "done: aal_2000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_7000.nii.gz\n",
-      "done: aal_7000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/aal_regions/aal_6000.nii.gz\n",
-      "done: aal_6000\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_mean.nii.gz\n",
+      "done: cbf-basil_variance\n",
+      "done: cbf-basil_mean\n",
       "done: unscaled_wcor_mean\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/global_wcov_variance.nii.gz\n",
       "done: global_wcov_variance\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/idemo_mean.nii.gz\n",
       "done: idemo_mean\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/idemo_variance.nii.gz\n",
       "done: idemo_variance\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_variance.nii.gz\n",
       "done: unscaled_wcor_variance\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/alff_mean.nii.gz\n",
       "done: alff_mean\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/cbf-isla_mean.nii.gz\n",
-      "done: cbf-isla_mean\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/alff_variance.nii.gz\n",
       "done: alff_variance\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/cbf-isla_variance.nii.gz\n",
-      "done: cbf-isla_variance\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/global_wcov_mean.nii.gz\n",
       "done: global_wcov_mean\n",
       "all done!\n"
      ]
@@ -180,6 +117,7 @@
    ],
    "source": [
     "figures_dir = os.path.join(output_dir, \"figures/surfaces_fwhm3\")\n",
+    "os.makedirs(figures_dir, exist_ok=True)\n",
     "\n",
     "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
     "\n",
@@ -213,37 +151,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "done: cbf-basil_sex-age_fdr05\n",
       "done: alff_age_fdr05\n",
-      "done: cbf-isla_sex-age_fdr05\n",
+      "done: cbf-basil_age_fdr05\n",
       "done: idemo_age_fdr05\n",
-      "done: cbf-isla_sex_fdr05\n",
-      "done: cbf-isla_age_fdr05\n",
       "done: idemo_sex-age_fdr05\n",
       "done: idemo_sex_fdr05\n",
       "done: alff_sex-age_fdr05\n",
       "done: alff_sex_fdr05\n",
+      "done: cbf-basil_sex_fdr05\n",
       "done: global_wcov_sex_fdr05\n",
       "done: unscaled_wcor_sex-age_fdr05\n",
       "done: global_wcov_sex-age_fdr05\n",
       "done: unscaled_wcor_sex_fdr05\n",
       "done: unscaled_wcor_age_fdr05\n",
       "done: global_wcov_age_fdr05\n",
+      "done: cbf-basil_variance\n",
+      "done: cbf-basil_mean\n",
       "done: unscaled_wcor_mean\n",
       "done: global_wcov_variance\n",
       "done: idemo_mean\n",
       "done: idemo_variance\n",
       "done: unscaled_wcor_variance\n",
       "done: alff_mean\n",
-      "done: cbf-isla_mean\n",
       "done: alff_variance\n",
-      "done: cbf-isla_variance\n",
       "done: global_wcov_mean\n",
       "all done!\n"
      ]
@@ -251,6 +189,7 @@
    ],
    "source": [
     "figures_dir = os.path.join(output_dir, \"figures/surfaces_fwhm0\")\n",
+    "os.makedirs(figures_dir, exist_ok=True)\n",
     "\n",
     "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
     "\n",
