--- a/ALFF_BASIL_IDEMO/R/surfplot.ipynb
+++ b/ALFF_BASIL_IDEMO/R/surfplot.ipynb
@@ -32,36 +32,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/cbf-basil_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/alff_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/cbf-basil_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/idemo_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/alff_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/alff_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/modality/cbf-basil_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex-age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_age_fdr05.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/cbf-basil_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/cbf-basil_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/global_wcov_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/idemo_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/idemo_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/alff_mean.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/alff_variance.nii.gz\n",
-      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_BASIL_IDEMO/output/freesurfer_images/MNI_space/descriptive/global_wcov_mean.nii.gz\n"
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/alff_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/idemo_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/cbf-basil-origin_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/cbf-basil-origin_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/idemo_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/idemo_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/alff_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/alff_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/modality/cbf-basil-origin_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/cbf-basil-origin_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/cbf-basil-origin_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/global_wcov_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/idemo_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/idemo_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/unscaled_wcor_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/alff_mean.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/alff_variance.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_cBASIL_IDEMO/R/../output/freesurfer_images/MNI_space/descriptive/global_wcov_mean.nii.gz\n"
      ]
     }
    ],
    "source": [
-    "output_dir = output_dir = os.path.join(os.getcwd(), \"../output\")\n",
+    "output_dir = os.path.join(os.getcwd(), \"../output\")\n",
     "freeMNI_dir = os.path.join(output_dir, \"freesurfer_images/MNI_space\")\n",
     "figures_dir = os.path.join(output_dir, \"figures/surfaces\")\n",
     "\n",
@@ -86,24 +86,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done: cbf-basil_sex-age_fdr05\n",
       "done: alff_age_fdr05\n",
-      "done: cbf-basil_age_fdr05\n",
       "done: idemo_age_fdr05\n",
+      "done: cbf-basil-origin_sex_fdr05\n",
+      "done: cbf-basil-origin_age_fdr05\n",
       "done: idemo_sex-age_fdr05\n",
       "done: idemo_sex_fdr05\n",
       "done: alff_sex-age_fdr05\n",
       "done: alff_sex_fdr05\n",
-      "done: cbf-basil_sex_fdr05\n",
+      "done: cbf-basil-origin_sex-age_fdr05\n",
       "done: global_wcov_sex_fdr05\n",
       "done: unscaled_wcor_sex-age_fdr05\n",
       "done: global_wcov_sex-age_fdr05\n",
       "done: unscaled_wcor_sex_fdr05\n",
       "done: unscaled_wcor_age_fdr05\n",
       "done: global_wcov_age_fdr05\n",
-      "done: cbf-basil_variance\n",
-      "done: cbf-basil_mean\n",
+      "done: cbf-basil-origin_variance\n",
       "done: unscaled_wcor_mean\n",
+      "done: cbf-basil-origin_mean\n",
       "done: global_wcov_variance\n",
       "done: idemo_mean\n",
       "done: idemo_variance\n",
@@ -158,24 +158,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done: cbf-basil_sex-age_fdr05\n",
       "done: alff_age_fdr05\n",
-      "done: cbf-basil_age_fdr05\n",
       "done: idemo_age_fdr05\n",
+      "done: cbf-basil-origin_sex_fdr05\n",
+      "done: cbf-basil-origin_age_fdr05\n",
       "done: idemo_sex-age_fdr05\n",
       "done: idemo_sex_fdr05\n",
       "done: alff_sex-age_fdr05\n",
       "done: alff_sex_fdr05\n",
-      "done: cbf-basil_sex_fdr05\n",
+      "done: cbf-basil-origin_sex-age_fdr05\n",
       "done: global_wcov_sex_fdr05\n",
       "done: unscaled_wcor_sex-age_fdr05\n",
       "done: global_wcov_sex-age_fdr05\n",
       "done: unscaled_wcor_sex_fdr05\n",
       "done: unscaled_wcor_age_fdr05\n",
       "done: global_wcov_age_fdr05\n",
-      "done: cbf-basil_variance\n",
-      "done: cbf-basil_mean\n",
+      "done: cbf-basil-origin_variance\n",
       "done: unscaled_wcor_mean\n",
+      "done: cbf-basil-origin_mean\n",
       "done: global_wcov_variance\n",
       "done: idemo_mean\n",
       "done: idemo_variance\n",
